Updated source example for episode 7
