# product-api/handlers/add.go
@@ -1,14 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-
-	"github.com/nicholasjackson/building-microservices-youtube/product-api/data"
-)
-
-func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle POST Product")
-
-	prod := r.Context().Value(KeyProduct{}).(data.Product)
-	data.AddProduct(&prod)
-}
